--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,20 @@ jobs:
           target: builder
           load: true
 
+  cljfmt-check:
+    name: cljfmt check
+    runs-on: [ linux, large ]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - uses: DeLaGuardo/setup-clojure@12.1
+        with:
+          cljfmt: 'latest'
+      - run: make cljfmt-check
+
   test:
     name: run tests
     needs: docker-build-cache
