--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   docker-build-cache:
     name: docker build cache
-    runs-on: [linux, large, docker]
+    runs-on: ci-cd
     steps:
       - uses: docker/setup-buildx-action@v3
         with:
@@ -23,7 +23,7 @@ jobs:
 
   cljfmt-check:
     name: cljfmt check
-    runs-on: [ linux, large ]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -38,7 +38,7 @@ jobs:
 
   clj-kondo-lint:
     name: clj-kondo lint
-    runs-on: [ linux, large ]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: DeLaGuardo/setup-clojure@12.5
@@ -50,7 +50,7 @@ jobs:
   test:
     name: run tests
     needs: docker-build-cache
-    runs-on: [linux, large, docker]
+    runs-on: ci-cd
     steps:
       - uses: docker/setup-buildx-action@v3
         with:
@@ -68,11 +68,10 @@ jobs:
   notifications:
     name: send notifications
     if: always()
-    runs-on: [linux, large, docker]
+    runs-on: ubuntu-latest
     needs: [test]
     steps:
-      - name:
-        if: github.ref == 'refs/heads/main' && failure()
+      - if: github.ref == 'refs/heads/main' && failure()
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v2
