fill out config defaults; flatter config file format

--- a/resources/config.json
+++ b/resources/config.json
@@ -1,12 +1,19 @@
 {
-  "fluree": {
-    "connection": {
-      "remoteServers": ["http://127.0.0.1:58090"]
-    },
-    "consensus": {
-      "protocol": "raft",
-      "logHistory": 10
+  "connection": {
+    "storageMethod": "file",
+    "parallelism": 4,
+    "storagePath": "data",
+    "cacheMaxMb": 1000,
+    "defaults": {
+      "index": {
+        "reindexMinBytes": 1000,
+        "reindexMaxBytes": 10000000
+      }
     }
+  },
+  "consensus": {
+    "protocol": "standalone",
+    "maxPendingTxns": 16
   },
   "http": {
     "server": "jetty",
@@ -15,6 +22,11 @@
   },
   "profiles": {
     "dev": {
+      "connection": {
+        "remoteServers": ["http://127.0.0.1:58090"],
+        "parallelism": 1,
+        "cacheMaxMb": 100
+      },
       "http": {
         "port": 58090
       }
