--- a/resources/config.json
+++ b/resources/config.json
@@ -7,7 +7,8 @@
     "defaults": {
       "index": {
         "reindexMinBytes": 1000,
-        "reindexMaxBytes": 10000000
+        "reindexMaxBytes": 10000000,
+        "maxOldIndexes": 3
       }
     }
   },
