config index->indexing so picked up properly

--- a/resources/config-raft.json
+++ b/resources/config-raft.json
@@ -7,7 +7,7 @@
     "storageMethod": "file",
     "parallelism": 4,
     "defaults": {
-      "index": {
+      "indexing": {
         "reindexMinBytes": 100000,
         "reindexMaxBytes": 10000000
       }
