add support for skipping already-migrated ledgers
Can override the skipping by supplying a "force" true argument in the task config.

--- a/resources/config-task.json
+++ b/resources/config-task.json
@@ -16,6 +16,7 @@
   },
   "task": {
     "id": "migrate/sid",
-    "ledgers": ["ledger1", "ledger2"]
+    "ledgers": ["ledger1", "ledger2"],
+    "force": false
   }
 }
