--- a/resources/config-task.json
+++ b/resources/config-task.json
@@ -14,8 +14,7 @@
       }
     }
   },
-  "task": {
-    "id": "migrate/sid",
+  "sidMigration": {
     "ledgers": ["ledger1", "ledger2"],
     "force": false
   }
