add example root identity

--- a/resources/config.json
+++ b/resources/config.json
@@ -22,7 +22,7 @@
     "server": "jetty",
     "port": 8090,
     "maxTxnWaitMs": 120000,
-    "rootIdentities": [],
+    "rootIdentities": ["did:fluree:<my-keypair-id>"],
     "closedMode": false
   },
   "profiles": {
