--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .nrepl-port
 /.cpcache
 /data/*
+/benchmark-data/*
 /target/*
 .clj-kondo/babashka
 .clj-kondo/metosin
@@ -11,3 +12,4 @@
 !/.clj-kondo/ci-config.edn
 /.lsp/
 /dev/data/*
+/data*/**
